--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "A simple express app for Halo Lab test task",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Volodymyr Karpovych <tg @januarycoming>",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-validator": "^6.14.1",
     "lru-cache": "^7.10.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
