--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest"
   },
   "author": "Volodymyr Karpovych <tg @januarycoming>",
   "license": "ISC",
@@ -20,5 +21,8 @@
     "sequelize": "^6.20.1",
     "winston": "^3.7.2",
     "winston-daily-rotate-file": "^4.6.1"
+  },
+  "devDependencies": {
+    "jest": "^28.1.0"
   }
 }
