--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,14 @@ services:
   
   app:
     build: ./
-    ports:
-      - '8080:8080'
+    expose:
+      - '8080'
     links:
       - redis
+
+  nginx:
+    build: ./nginx/
+    ports:
+      - '80:80'
+    links:
+      - app
